--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -222,7 +222,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 		\item La grilla tiene el alto y ancho del mapa %DONE
 
-		\item Los jugadores conectados estan en la grilla en la posicion en la que se encuentra
+		\item Los jugadores conectados estan en la grilla en la posicion en la que se encuentra %DONE
 
 		\item En los jugadores que se encutuentran en la grilla solo estan los que realmente se encuentran ahi
 
@@ -281,6 +281,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		($\forall i$: nat) ((i $\leq$ long(e.jugadores) $\land$ e.jugadores[i]$\rightarrow$conectado?)$\implies$(posExistente(e.jugadores[i]$\rightarrow$posicion, e.mapa) $\yluego$ \\
 		i $\in$ e.grillaPos[longitud(e.jugadores[i]$\rightarrow$posicion)][latitud(e.jugadores[i]$\rightarrow$posicion)].jugsEnPos))
 	}
+
 
 
 
