--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -224,7 +224,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 		\item Los jugadores conectados estan en la grilla en la posicion en la que se encuentra %DONE
 
-		\item En los jugadores que se encutuentran en la grilla solo estan los que realmente se encuentran ahi
+		\item En los jugadores que se encutuentran en la grilla solo estan los que realmente se encuentran ahi %DONE
 
 		\item Solo las posiciones con pokemon tienen pokemons en la grilla
 
@@ -302,6 +302,9 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		FI
 	}
 
+	\tadAxioma{juntarPokemonesGrilla(e)}{
+		($\forall c$: coor) posExistente(c, e.mapa) $\implies$ (c $\in$ e.posConPokemons $\iff$ e.grillaPos[longitud(c)][latitud(c)].hayPokemon?)
+	}
 
 
 
@@ -550,7 +553,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 				\tcc{Si el movimiento es lejano, sumar al contador e manejar captura si corresponde}
 				j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura +1\OdeLinea{1}
 				infoPos: posPk $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)]\OdeLinea{1}
-				\eIf{posPk.contadorCaptura = 10  \textbf{and not} esVacio?(posPk.jugEsperandoCaptura)}{
+				\eIf{posPk.contadorCaptura = 10}{
 					pokemon: pk $\leftarrow$ posPk.pokemon\OdeLinea{1}
 					jugador: captor $\leftarrow$ Menor(posPk.jugEsperandoCaptura)\OdeLinea{1}
 					(*j.jugadores[captor]).cantPokemons $\leftarrow$ (*j.jugadores[captor]).cantPokemons + 1\OdeLinea{1}
